--- a/web/src/index.css
+++ b/web/src/index.css
@@ -51,3 +51,13 @@ code {
 .custom-link:hover {
   color: rgb(64 64 64) !important;
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+    filter: invert(100%);
+  }
+
+  body img {
+    filter: invert(100%);
+  }
+}
