fix: edit user page styling, js bundle hash, disable theme, enable app link on user account

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -52,6 +52,10 @@ code {
   color: rgb(64 64 64) !important;
 }
 
+.header-dropdown ul {
+  min-width: 150px;
+}
+
 @media (prefers-color-scheme: dark) {
   body {
     background: grey;
