--- a/web/src/App.less
+++ b/web/src/App.less
@@ -89,20 +89,25 @@ img {
 }
 
 .forget-content {
-  padding: 10px 100px 20px;
-  margin: 30px auto;
-  border: 2px solid #fff;
-  border-radius: 7px;
-  background-color: rgb(255 255 255);
-  box-shadow: 0 0 5px rgb(0 0 0 / 15%);
+  margin: 50px auto;
+  max-width: 400px;
+  background: transparent;
 }
 
 .login-panel {
   margin-top: 50px;
   margin-bottom: 50px;
+  padding: 10px;
   display: flex;
   background-color: rgb(255 255 255);
   overflow: hidden;
+  border-radius: 12px;
+}
+
+.forget-content-inner {
+  background-color: rgb(255 255 255);
+  padding: 10px;
+  margin: 10px;
   border-radius: 12px;
 }
 
@@ -110,16 +115,27 @@ img {
   .login-panel {
     background-color: rgb(245 245 245);
   }
+
+  .forget-content-inner {
+    background-color: rgb(245 245 245);
+    box-shadow: 0 0 5px rgb(0 0 0 / 15%);
+  }
 }
 
 .login-form {
   text-align: center;
-  padding: 30px;
-  width: 100vw;
+  padding: 20px;
+  width: calc(100vw - 40px);
   max-width: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+input.ant-input,
+input.ant-select-selection-search-input,
+span.ant-select-selection-item {
+  font-size: 16px !important;
 }
 
 .ant-form-large .ant-form-item .ant-form-item-label > label {
