--- a/web/src/auth/AuthButtons.css
+++ b/web/src/auth/AuthButtons.css
@@ -2,14 +2,6 @@
   --border-primary: rgb(191 191 191);
 }
 
-/*
-.social-auth {
-  text-align: center;
-  padding-bottom: 1em;
-  transform: translateY(7.5px);
-}
-*/
-
 .social-auth {
   margin-top: 0;
   text-align: center;
@@ -18,12 +10,29 @@
 }
 
 .password-validation {
+  z-index: 1200;
+  background: white;
+  bottom: 74px;
+  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   border: 1px solid #d9d9d9;
   border-radius: 8px;
   padding: 8px 15px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 10%;
+    bottom: -15px;
+    transform: translateX(-50%);
+    width: 0;
+    height: 0;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    border-top: 15px solid white;
+  }
 }
 
 .password-validation p,
